# biom3d

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  README.md  auto_config.py  metrics.py  omero_downloader.py  pred.py  predictors.py  preprocess.py  pyproject.toml  register.py  requirements.txt  run_pred.sh  run_preprocess.sh  run_train.sh  setup.py  train.py  trainers.py  utils.py
.github/workflows/: build.yml  config_docker.json  mactest.yml
bash/: deploy_win64.sh  dist.sh  run_eval.sh  run_pred.sh  run_preprocess.sh  run_preprocess_train.sh  run_train.sh
biom3d/: auto_config.py  builder.py  callbacks.py  omero_downloader.py  omero_pred.py  predictors.py  preprocess.py  train.py  utils.py
biom3d/models/: encoder_vgg.py
configs/: pancreas_example.py  unet_chromo.py  unet_lung.py  unet_pancreas.py
datasets/: semseg_patch_fast.py
deployment/dockerfiles/: build.bat  build.sh  entrypoint.sh  template.dockerfile
deployment/dockerfiles/examples/: biom3d_cpu_torch2_7.dockerfile  biom3d_cuda11_8cudnn8torch2_3.dockerfile  build.bat  build.sh
deployment/exe/: auto_update.py
deployment/exe/macos/: Biom3d.sh  Info.plist  logo.icns  pack.sh
deployment/exe/windows/: Biom3d.bat  pack.bat
docs/: Makefile  auto_config.rst  biom3d_colab.ipynb  callbacks.rst  conf.py  docker.md  faq.md  index.rst  installation.md  make.bat  preprocess.rst  quick_run_gui.md  requirements.txt  trainers.rst  tuto_cli.md  tuto_config.md
docs/_static/css/: readthedocs.css
docs/api/: api.rst  auto_config.rst  builder.rst  callbacks.rst  datahandler.rst  datasets.rst  eval.rst  metrics.rst  omero.rst  predictions.rst  predictors.rst  preprocess.rst  preprocess_train.rst  register.rst  train.rst  trainers.rst
docs/api/datasets/: batchgen.rst  datasets.rst  patch_fast.rst  torchio.rst
docs/api/models/: decoder_vgg.rst  eff3d.rst  encoder_eff3d.rst  encoder_vgg.rst  models.rst  vgg_deep.rst
docs/api/utils/: config.rst  datahandler.rst  decorator.rst  encoding.rst  filtering.rst  fold.rst  image.rst  network.rst  os.rst  sampling.rst  test.rst  time.rst  utils.rst
docs/dep/: cicd.md  dep.rst  docker.md  installer.md
docs/how_it_works/: post_processing.md  pre_processing.md
docs/tuto/: cli.md  config.md  dataset.md  docker.md  gui.md  server.md
models/: unet3d_vgg_deep.py
src/biom3d/: __init__.py  auto_config.py  builder.py  callbacks.py  config_default.py  eval.py  gui.py  gui_dist.py  metrics.py  omero_downloader.py  omero_pred.py  omero_preprocess_train.py  omero_uploader.py  package.py  pred.py  predictors.py  preprocess.py  preprocess_train.py  register.py  train.py  trainers.py  upload_pred.py  utils.py
src/biom3d/configs/: unet_default.py  unet_pancreas.py
tests/: test_auto_config.py  test_preprocess.py  test_utils.py
(+46 files in other folders)
