[build-system]
requires = ["setuptools>=61.0",
            "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biom3d"
version = "0.0.37"
authors = [
  {name="Guillaume Mougeot", email="guillaume.mougeot@laposte.net"},
]
description = "Biom3d. Framework for easy-to-use biomedical image segmentation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>1.10.0",
    "tqdm>=4.62.3",
    "scikit-image>=0.14",
    "scipy>=1.9.1",
    "numpy>=1.21.2",
    "SimpleITK>=2.1.1",
    "pandas>=1.4.0",
    "matplotlib>=3.5.3",
    "tensorboard>=2.8.0",
    "PyYAML>=5.4",
    "torchio>=0.18.84",
    "protobuf>=3.19.3",
    "appdirs>=1.4.4",
    "numba>=0.56.4",
    "paramiko",
    "netcat",
    "tifffile"
]
keywords=['deep learning', 'image segmentation', 'medical image analysis',
            'medical image segmentation', 'biological image segmentation', 'bio-imaging']

[project.optional-dependencies]
docs = [
    'sphinx>=4.1.2',
    'sphinxcontrib-apidoc',
    'sphinx_rtd_theme>=0.3.1',
    'myst_nb',
    'furo>=2022.06.21',
    'docutils>=0.17.1',
]
gui = [
    "omero-py",
]

[project.urls]
"Homepage" = "https://github.com/GuillaumeMougeot/biom3d"
"Bug Tracker" = "https://github.com/GuillaumeMougeot/biom3d/issues"

[project.scripts]
biom3d = "biom3d.gui:main"